--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
- <img src="something.jpg">
-  <img src="something.jpg" alt="something!">
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="lion.jpg" alt="something!">
   <img src="something.jpg" alt="something!" title="this is something!">
 
 </body>
