--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-  <img src="lion.jpg" alt="something!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg.jpg" alt="lion!">
   <img src="something.jpg" alt="something!" title="this is something!">
 
 </body>
