--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg.jpg" alt="lion!">
-  <img src="something.jpg" alt="something!" title="this is something!">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg.jpg" alt="lion!" title="this is lion!">
 
 </body>
 </html>
